--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BT5.0 - Bluetooth 5.0 Transmitter</title>
-    <meta http-equiv="refresh" content="0;url=/project4/" />
+    <meta http-equiv="refresh" content="0;url=/project/" />
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
